--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title:              Hi, there
-email:              your-email@example.com
-description:        A Blog Theme by Start Bootstrap
+email:              #pyk5113@gmail.com
+description:        To be a Sensible Developer
 author:             Start Bootstrap
 baseurl:            
 url:                "https://YukyeongP.github.io"
