--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title:              Hi, there
 email:              #pyk5113@gmail.com
-description:        To be a Sensible Developer
+description:        My journey to become a Sensual developer✨
 author:             Start Bootstrap
 baseurl:            
 url:                "https://YukyeongP.github.io"
